--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gen-pair-local"
+name = "gen_pair_local"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,6 +14,7 @@ chrono = "0.4.31"
 csv = "1.3.0"
 dotenv = "0.15.0"
 futures = "0.3.29"
+pandoc_types = "0.6.0"
 serde = "1.0.193"
 # github-flows = "0.6.0"
 # openai-flows = "0.9.1"
