--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ chrono = "0.4.31"
 csv = "1.3.0"
 dotenv = "0.15.0"
 futures = "0.3.29"
+pandoc = "0.8.11"
+pandoc_ast = "0.8.6"
 pandoc_types = "0.6.0"
 serde = "1.0.193"
 # github-flows = "0.6.0"
